# Generated by Django 4.2.17 on 2026-03-17 11:33

from django.conf import settings
from django.db import migrations, models
import django.db.models.deletion
import django.utils.timezone
import uuid


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
        ('projects', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='CustomField',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('name', models.CharField(max_length=100)),
                ('field_type', models.CharField(choices=[('text', 'Text'), ('number', 'Number'), ('date', 'Date'), ('select', 'Select'), ('multi_select', 'Multi Select'), ('user', 'User'), ('url', 'URL')], max_length=15)),
                ('options', models.JSONField(blank=True, help_text='For select/multi_select types', null=True)),
                ('is_required', models.BooleanField(default=False)),
                ('position', models.PositiveIntegerField(default=0)),
                ('created_at', models.DateTimeField(default=django.utils.timezone.now)),
                ('created_by', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='created_custom_fields', to=settings.AUTH_USER_MODEL)),
                ('project', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='custom_fields', to='projects.project')),
            ],
            options={
                'db_table': 'custom_fields',
            },
        ),
        migrations.CreateModel(
            name='Task',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('title', models.CharField(max_length=500)),
                ('description', models.JSONField(blank=True, help_text='Rich text as ProseMirror JSON', null=True)),
                ('type', models.CharField(choices=[('task', 'Task'), ('bug', 'Bug'), ('story', 'Story'), ('epic', 'Epic'), ('personal', 'Personal')], default='task', max_length=10)),
                ('status', models.CharField(choices=[('backlog', 'Backlog'), ('todo', 'Todo'), ('in_progress', 'In Progress'), ('in_review', 'In Review'), ('done', 'Done'), ('cancelled', 'Cancelled')], default='backlog', max_length=15)),
                ('priority', models.CharField(choices=[('critical', 'Critical'), ('high', 'High'), ('medium', 'Medium'), ('low', 'Low'), ('none', 'None')], default='none', max_length=10)),
                ('story_points', models.PositiveIntegerField(blank=True, null=True)),
                ('due_date', models.DateTimeField(blank=True, null=True)),
                ('start_date', models.DateTimeField(blank=True, null=True)),
                ('reminder_at', models.DateTimeField(blank=True, null=True)),
                ('position', models.FloatField(default=0)),
                ('is_private', models.BooleanField(default=False)),
                ('created_at', models.DateTimeField(default=django.utils.timezone.now)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('completed_at', models.DateTimeField(blank=True, null=True)),
                ('deleted_at', models.DateTimeField(blank=True, null=True)),
                ('assigned_to', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='assigned_tasks', to=settings.AUTH_USER_MODEL)),
                ('board_column', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='tasks', to='projects.boardcolumn')),
                ('created_by', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='created_tasks', to=settings.AUTH_USER_MODEL)),
                ('parent_task', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='subtasks', to='tasks.task')),
                ('project', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='tasks', to='projects.project')),
                ('sprint', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='tasks', to='projects.sprint')),
            ],
            options={
                'db_table': 'tasks',
            },
        ),
        migrations.CreateModel(
            name='TaskDependency',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('type', models.CharField(choices=[('blocks', 'Blocks'), ('is_blocked_by', 'Is Blocked By'), ('relates_to', 'Relates To'), ('duplicates', 'Duplicates'), ('is_duplicated_by', 'Is Duplicated By')], max_length=20)),
                ('created_at', models.DateTimeField(default=django.utils.timezone.now)),
                ('created_by', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='created_dependencies', to=settings.AUTH_USER_MODEL)),
                ('depends_on_task', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='dependents', to='tasks.task')),
                ('task', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='dependencies', to='tasks.task')),
            ],
            options={
                'db_table': 'task_dependencies',
            },
        ),
        migrations.CreateModel(
            name='Comment',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('body', models.JSONField(help_text='Rich text as ProseMirror JSON')),
                ('is_edited', models.BooleanField(default=False)),
                ('created_at', models.DateTimeField(default=django.utils.timezone.now)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('deleted_at', models.DateTimeField(blank=True, null=True)),
                ('author', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='comments', to=settings.AUTH_USER_MODEL)),
                ('parent_comment', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='replies', to='tasks.comment')),
                ('task', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='comments', to='tasks.task')),
            ],
            options={
                'db_table': 'comments',
            },
        ),
        migrations.CreateModel(
            name='ActivityLog',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('entity_type', models.CharField(choices=[('task', 'Task'), ('project', 'Project'), ('sprint', 'Sprint'), ('comment', 'Comment')], max_length=10)),
                ('entity_id', models.UUIDField()),
                ('action', models.CharField(max_length=50)),
                ('old_value', models.JSONField(blank=True, null=True)),
                ('new_value', models.JSONField(blank=True, null=True)),
                ('created_at', models.DateTimeField(default=django.utils.timezone.now)),
                ('actor', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='activity_logs', to=settings.AUTH_USER_MODEL)),
                ('project', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='activity_logs', to='projects.project')),
            ],
            options={
                'db_table': 'activity_log',
            },
        ),
        migrations.CreateModel(
            name='TaskLabel',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('label', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='task_labels', to='projects.label')),
                ('task', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='task_labels', to='tasks.task')),
            ],
            options={
                'db_table': 'task_labels',
                'unique_together': {('task', 'label')},
            },
        ),
        migrations.CreateModel(
            name='TaskGuestAccess',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('granted_at', models.DateTimeField(default=django.utils.timezone.now)),
                ('expires_at', models.DateTimeField(blank=True, null=True)),
                ('granted_by', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='granted_accesses', to=settings.AUTH_USER_MODEL)),
                ('task', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='guest_accesses', to='tasks.task')),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='guest_task_accesses', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'db_table': 'task_guest_access',
                'unique_together': {('task', 'user')},
            },
        ),
        migrations.CreateModel(
            name='TaskCustomFieldValue',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('value', models.TextField(blank=True, default='')),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('custom_field', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='values', to='tasks.customfield')),
                ('task', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='custom_field_values', to='tasks.task')),
            ],
            options={
                'db_table': 'task_custom_field_values',
                'unique_together': {('task', 'custom_field')},
            },
        ),
        migrations.CreateModel(
            name='TaskAssignment',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('assigned_at', models.DateTimeField(default=django.utils.timezone.now)),
                ('assigned_by', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='given_assignments', to=settings.AUTH_USER_MODEL)),
                ('task', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='co_assignments', to='tasks.task')),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='co_assigned_tasks', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'db_table': 'task_assignments',
                'unique_together': {('task', 'user')},
            },
        ),
        migrations.AddIndex(
            model_name='task',
            index=models.Index(fields=['project'], name='tasks_project_f1bd77_idx'),
        ),
        migrations.AddIndex(
            model_name='task',
            index=models.Index(fields=['assigned_to'], name='tasks_assigne_00feb5_idx'),
        ),
        migrations.AddIndex(
            model_name='task',
            index=models.Index(fields=['status'], name='tasks_status_031d4c_idx'),
        ),
        migrations.AddIndex(
            model_name='task',
            index=models.Index(fields=['due_date'], name='tasks_due_dat_0359a9_idx'),
        ),
        migrations.AddIndex(
            model_name='task',
            index=models.Index(fields=['deleted_at'], name='tasks_deleted_1d9a30_idx'),
        ),
        migrations.AddIndex(
            model_name='activitylog',
            index=models.Index(fields=['entity_type', 'entity_id'], name='activity_lo_entity__2a2d99_idx'),
        ),
        migrations.AddIndex(
            model_name='activitylog',
            index=models.Index(fields=['project'], name='activity_lo_project_f92249_idx'),
        ),
        migrations.AddIndex(
            model_name='activitylog',
            index=models.Index(fields=['actor'], name='activity_lo_actor_i_eadb61_idx'),
        ),
        migrations.AddIndex(
            model_name='activitylog',
            index=models.Index(fields=['created_at'], name='activity_lo_created_8906e2_idx'),
        ),
    ]
